[package]
name = "tailed"
version = "0.0.1"
authors = ["Igor Matuszewski <xanewok@gmail.com>"]
edition = "2018"
description = "Typed view into dynamically-sized byte buffers"
repository = "https://github.com/xanewok/tailed"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = { version = "1.1", optional = true }

[features]
default = []
# Requires a `nightly` toolchain due to `const_transmute` feature.
static-assert = ["static_assertions"]
